BuildHughes/translation-tool/inputs/source_meta/objects/Product_Relationship__c.object
<CustomObject>
    <description>Product Relationship</description>
    <fields>
        <fullName>Association__c</fullName>
        <description>Connectivity type between Products</description>
        <label>Association</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Hosted By</fullName>
                </value>
                <value>
                    <fullName>Managed By</fullName>
                </value>
                <value>
                    <fullName>Connected To</fullName>
                    <default>true</default>
                    <label>Connected To</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HNS_PROD_REL_ID__c</fullName>
        <description>This field is Used for External ID for DI</description>
        <externalId>true</externalId>
        <label>HNS PROD REL ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HNS_Product_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HNS Product 1</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>Product_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HNS_Product_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up Reference to HNS Product</description>
        <label>HNS Product 2</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Product Relationships (HNS Product)</relationshipLabel>
        <relationshipName>Product_Relationships2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Premise_CentralBD_ID__c</fullName>
        <description>On Premise CentralBD ID</description>
        <externalId>true</externalId>
        <inlineHelpText>On Premise CentralBD ID</inlineHelpText>
        <label>On Premise CentralBD ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Relationship</label>
    <nameField>
        <displayFormat>PRODREL-{0000000000}</displayFormat>
        <label>Product Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Changing_Product_1_and_Product_2</fullName>
        <active>true</active>
        <description>Prevent changing Product 1 and Product 2 on Product Relationship if On_Premise_CentralBD_ID__c is not null, since the Product Relationship is mastered by Staging DB</description>
        <errorConditionFormula>NOT (ISBLANK( On_Premise_CentralBD_ID__c ) ) &amp;&amp; ( ISCHANGED( HNS_Product_1__c ) ||  ISCHANGED( HNS_Product_2__c ) )</errorConditionFormula>
        <errorMessage>Cannot Change the Product 1 OR Product 2 For this Record</errorMessage>
    </validationRules>
</CustomObject>